--- a/src/css/general.css
+++ b/src/css/general.css
@@ -37,11 +37,6 @@ body {
     overflow-x: hidden;
     scroll-behavior: smooth;
     scrollbar-width: thin;
-    background-image: url('/Back.jpg');
-    background-repeat: no-repeat;
-    background-size: 2000px;
-    background-position-x: 700px;
-    background-position-y: -700px;
 }
 
 p { line-height: 24px; }
@@ -62,15 +57,14 @@ p { line-height: 24px; }
 
 .blur1 {
     position: absolute;
-    top: 700px;
-    left: 0;
+    top: -650px;
+    right: -700px;
     width: 100%;
     height: 100vh;
-    background-image: url('/Starts1.svg');
-    background-size: 100%;
-    z-index: -10;
-    opacity: 0.5;
-    display: none;
+    background-image: url('/Back.jpg');
+    background-repeat: no-repeat;
+    background-size: 1900px;
+    z-index: -1;
 }
 
 .blur3 {
@@ -153,16 +147,14 @@ footer {
 }
 
 @media (max-width: 1200px) {
-    body {
-        background-position-x: 300px;
-        background-position-y: -700px;
+    .blur1 {
+        right: -300px;
     }
 }
 
 @media (max-width: 900px) {
-    body {
-        background-position-x: 100px;
-        background-position-y: -700px;
+    .blur1 {
+        right: -100px;
     }
 
     .column-2 {
