--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -158,8 +158,6 @@
         
         & img { 
             max-width: 100%;
-            -webkit-mask-image: linear-gradient(To bottom, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%);
-            mask-image: linear-gradient(To bottom, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%);
         }
 
         & .cont-text {
@@ -210,27 +208,45 @@
             padding: 15px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
             position: absolute;
             top: 0;
 
             & .skill {
-                padding: 6px 16px;
-                font-size: 13px;
-                border-radius: 10px;
+                padding: 4px 8px;
+                font-size: 11px;
+                border-radius: 6px;
                 text-decoration: none;
-                font-weight: 600;
                 color: var(--font-black);
                 background-color: var(--border-white);
-                border: 1px solid var(--border-sm-white);
+                outline: 1px solid var(--border-sm-white);
+                font-weight: 600;
 
-                &:hover {
-                    background-color: var(--font-black);
-                    color: var(--bg-white);
-                    border: none;
-                    cursor: pointer;
+                &:nth-child(1) {
+                    background: linear-gradient(140deg, var(--bg-purple) 0%, var(--bg-white) 50%);
                 }
             }
+        }
+    }
+}
+
+.projects {
+    .cardProject {
+        padding: 20px;
+        background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 20%, var(--bg-white) 85%, var(--border-white) 100%);
+
+        & img {
+            border: 1px solid var(--border-white);
+            border-radius: 20px;
+        }
+
+        & .cont-text {
+            background: transparent;
+            padding: 15px 0;
+        }
+
+        .cont-skill {
+            top: 20px;
         }
     }
 }
