--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -156,9 +156,7 @@
             background-color: var(--bg-white);
         }
         
-        & img { 
-            max-width: 100%;
-        }
+        & img { max-width: 100%; }
 
         & .cont-text {
             padding: 20px;
@@ -236,7 +234,7 @@
         background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 20%, var(--bg-white) 85%, var(--border-white) 100%);
 
         & img {
-            border: 1px solid var(--border-white);
+            border: 1px solid var(--bg-mm-white);
             border-radius: 20px;
         }
 
@@ -245,9 +243,7 @@
             padding: 15px 0;
         }
 
-        .cont-skill {
-            top: 20px;
-        }
+        .cont-skill { top: 20px; }
     }
 }
 
