--- a/src/css/home.css
+++ b/src/css/home.css
@@ -91,45 +91,6 @@ header {
         font-family: "Chakra Petch", serif;
     }
 
-    & .letter {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: -1;
-        
-        & span {
-            font-size: clamp(100px, 50vw, 600px);
-            color: #ffffff24;
-            z-index: -1;
-            font-family: "Chakra Petch", serif;
-            -webkit-text-stroke: 3px;
-            font-weight: 900;
-            -webkit-text-stroke-color: var(--font-black);
-            user-select: none;
-
-            &:nth-child(1) {
-                opacity: 0.2;
-                &::first-letter { opacity: 0.3; }
-            }
-
-            &:nth-child(2) {
-                opacity: 0.2;
-                &::first-letter { opacity: 0.3; }
-            }
-
-            &:nth-child(3) {
-                opacity: 0.2;
-                &::first-letter { opacity: 0.3; }
-            }
-        }
-
-        &::first-letter { opacity: 0.1; }
-    }
-
     & p {
         text-align: center;
         font-size: clamp(16px, 5vw, 20px);
@@ -169,45 +130,6 @@ header {
             background-color: var(--font-black);
             color: var(--bg-white);
             border: none;
-        }
-    }
-
-    & .cont-line {
-        position: absolute;
-        bottom: -100px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 150px;
-        height: 400px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: -2;
-
-        & div {
-            width: 1px;
-            height: 100%;
-            background: linear-gradient(To bottom, transparent, var(--border-sm-white), transparent);
-            position: relative;
-            
-            &::before {
-                position: absolute;
-                content: '';
-                top: 50%;
-                left: -1px;
-                width: 3px;
-                height: 40px;
-                border-radius: 0 0 10px 10px;
-                background: linear-gradient(To bottom, transparent, var(--font-black));
-            }
-
-            &:nth-child(1) {
-                &::before { top: 20%; }
-            }
-
-            &:nth-child(3) {
-                &::before { top: 30%; }
-            }
         }
     }
 
@@ -256,30 +178,46 @@ header {
             align-items: center;
             gap: 5px;
 
-            & div {
+            & a {
                 background-color: var(--border-sm-white);
                 border-radius: var(--radius-card);
                 width: 30px;
-                height: 5px;
+                height: 8px;
+                position: relative;
+                cursor: pointer;
+
+                &:hover {
+                    & span {
+                        scale: 1;
+                    }
+                }
+
+                & span {
+                    position: absolute;
+                    top: -40px;
+                    right: 0;
+                    font-size: 15px;
+                    color: var(--font-black);
+                    padding: 5px 15px;
+                    background-color: var(--bg-white);
+                    border: 1px solid var(--border-white);
+                    border-radius: 20px;
+                    white-space: nowrap;
+                    scale: 0;
+                    transition: 150ms;
+                    box-shadow: 0 0 10px var(--bg-white);
+                }
                 
                 &:nth-child(1) {
                     position: relative;
-                    overflow: hidden;
-
-                    &::before {
-                        position: absolute;
-                        content: '';
-                        top: 0;
-                        left: 0;
-                        width: 60%;
-                        height: 100%;
-                        background-color: var(--bg-purple);
-                    }
+                    background-color: var(--bg-purple);
                 }
             }
         }
     }
 }
+
+.navigate { height: 20px; }
 
 .title-section {
     width: 100%;
@@ -303,9 +241,9 @@ header {
     &::after {
         position: absolute;
         content: '';
-        width: 20px;
-        height: 20px;
-        bottom: -9px;
+        width: 30px;
+        height: 5px;
+        bottom: -2px;
         left: 50%;
         transform: translateX(-50%);
         background-color: var(--font-black);
